klasörleri ekledik ve referans verdik

--- a/FoodyTekmerBusinessLayer/FoodyTekmerBusinessLayer.csproj
+++ b/FoodyTekmerBusinessLayer/FoodyTekmerBusinessLayer.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstract\" />
+    <Folder Include="Concrete\" />
+    <Folder Include="ValidationRules\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FoodyTekmerDataAcessLayer\FoodyTekmerDataAccessLayer.csproj" />
+  </ItemGroup>
+
 </Project>
