--- a/FoodyTekmerWebUI/FoodyTekmerWebUI.csproj
+++ b/FoodyTekmerWebUI/FoodyTekmerWebUI.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FoodyTekmerBusinessLayer\FoodyTekmerBusinessLayer.csproj" />
     <ProjectReference Include="..\FoodyTekmerDataAcessLayer\FoodyTekmerDataAccessLayer.csproj" />
     <ProjectReference Include="..\FoodyTekmerEntityLayer\FoodyTekmerEntityLayer.csproj" />
   </ItemGroup>
